header z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ header {
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 999;
 }
 
 header .upgrade {
